--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --main-color: #7c7ddf;
+    --main-color: #ffffff;
     --black: #000000;
-    --bg: rgba(137, 225, 245);
+    --bg: #a61212;
     --border: .1rem solid rgba(0, 0, 0, 0.3);
     
 }
@@ -240,7 +240,7 @@ section{
 }
 
 .produtos .box-container .box .content .price{
-    color:#fe0101;
+    color:#ffffff;
     font-size: 2.5rem;
 }
 
