--- a/src/pages/CadastroCliente/CadastroCliente.css
+++ b/src/pages/CadastroCliente/CadastroCliente.css
@@ -8,7 +8,7 @@ h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1{
+h2{
     color: white;
 }
 
@@ -20,7 +20,7 @@ h1{
     margin-top: 5vh;
 }
 
-.Form h1 {
+.Form h2 {
     text-align: center;
     margin: 0 auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,6 +51,7 @@ form .informacoesDireita {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    
 }
 
 .informacoesDireita input {
@@ -128,6 +129,38 @@ input:checked+.slider:before {
     border-radius: 50%;
 }
 
+.linha-dupla {
+    display: flex;
+    gap: 20px; /* Espaço entre os campos */
+    align-items: center;
+}
+
+.linha-dupla label {
+    flex: 1; /* Cada campo ocupa a mesma largura */
+}
+
+.linha-dupla input, 
+.linha-dupla select {
+    width: 100%; 
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+input[type="cep"] {
+    width: 30%;
+}
+
+input[type="password"] {
+    width: 30%;
+}
+
+.linha-separadora {
+    border: none; /* Remove a borda padrão */
+    height: 1px; /* Altura da linha */
+    background-color: #ccc; /* Cor da linha */
+    margin: 20px 0; /* Espaçamento acima e abaixo da linha */
+    width: 100%; /* Largura total da linha */
+}
 
 @media (max-width: 768px) {
     .Form {
