--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -33,3 +33,8 @@ input{
     background-color: grey;
     background-color: rgba(73, 72, 72, 0.9);
 }
+#title{
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+}
